# modern-software-dev-assignments

./: README.md  pyproject.toml
week1/: README.md  chain_of_thought.py  k_shot_prompting.py  k_shot_prompting.pyt  k_shot_prompting.pyu  rag.py  reflexion.py  reflexion.pyu  self_consistency_prompting.py  tool_calling.py
week1/data/: api_docs.txt
week2/: README.md  assignment.md  writeup.md
week2/app/: db.py  exceptions.py  main.py  schemas.py
week2/app/database/: cache.py  connection.py  optimized_db.py  repository.py  schema.py
week2/app/routers/: action_items.py  admin.py  notes.py
week2/app/services/: extract.py
week2/data/: app.db-shm  app.db-wal
week2/frontend/: index.html
week2/tests/: test_extract.py
week3/: assignment.md  server.py
week4/: assignment.md
week4/docs/: TASKS.md
week5/: assignment.md
week5/data/: app.db
week6/: README.md  assignment.md
week6/docs/: TASKS.md
