[tool.poetry]
name = "modern-software-dev-assignments"
version = "0.1.0"
description = ""
authors = ["mihail911 <mihail911@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.99.3"
python-dotenv = "^1.1.1"
fastapi = "^0.114.2"
uvicorn = {version = "^0.30.6", extras = ["standard"]}

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
